less/app.less
/* ... */
.songs {
	display: none;
	color: @white;
	background-color: #142129;
	background: repeating-radial-gradient(circle at 0 0, #121b21, #19232b 7rem);
	padding-top: 4rem;
	padding-bottom: 6rem;
}

.song {
	border-top: 2px solid transparent;
	background: darken(@music-hp-dark, 5%);
	border-color: @music-hp-dark;
	.transition(0.3s all ease-in-out);
	-webkit-backface-visibility: hidden; // prevent flickering in Safari

	> .container-fluid {
		.transition(0.3s height ease-in-out);
		-webkit-backface-visibility: hidden; // prevent flickering in Safari
		padding: 0 @grid-gutter-width / 2;
		margin: 0 auto;
		display: table;
		width: 100%;

		@media screen and (max-width: @screen-xs-max){
			padding-left: 0.5rem;
			padding-right: 0.5rem;
		}
	}

    .is-cast-receiver & {
        background: transparent !important;
    }

	&:first-child {
		border-color: transparent;
	}

	&.playing {
		background: transparent;
	}

	&.small {
		cursor: pointer;
		background: darken(@music-hp-dark, 5%);
		border-color: ;

		.no-touch & {
			&:hover {
				background: @music-hp-dark;
			}
		}
	}

	.song-info {
		.make-row();
		display: table-cell;
		vertical-align: middle;
		height: 100%;
		padding: @grid-gutter-width 0;
		.transition(all 0.3s ease-in-out);

		.small& {
			padding: @line-height-computed / 2 0;
			min-height: 0;
		}

		@media screen and (max-width: @screen-xs-max){
			vertical-align: top;
			padding-top: 0;
		}


		@media screen and (orientation: portrait){
			margin-left: 0.5rem;
			margin-right: 0.5rem;
		}

		.album-cover {
			.transition(all 0.3s ease-in-out);
			.transform-origin(top left);
			.make-xs-column(12);
			.make-sm-column(5);
			margin-bottom: 0;
			margin-right: 0;
			.scaleY(1);

			.small& {
				.transition(all 0.3s ease-in-out  0.3s);
				width: 0;
				margin-bottom: 0;
				.scaleY(0);
			}

			.song-header {
				position: absolute;
				top: 0;
				left: 0;
				padding: 1rem;
				width: 100%;
				#gradient > .vertical(@start-color: rgba(0,0,0,0.9); @end-color: transparent;);
			}

			@media screen and (max-width: @screen-xs-max){
				padding-left: 0;
				padding-right: 0;
				margin: 0 -0.5rem 1rem;
				width: calc(~"(100%) + (1rem)");
				width: -webkit-calc(~"(100%) + (1rem)");
				max-width: none;
				position: relative;

				&:before {
					display: block;
					content: ' ';
					#gradient > .vertical(@start-color: transparent; @end-color: rgba(0,0,0,0.9););
					position: absolute;
					top: 50%;
					left: 0;
					right: 0;
					bottom: 0;
					z-index: 100;
				}

				.song-tools {
					position: absolute;
					bottom: 0;
					left: 1.5rem;
					right: 1.5rem;
					z-index: 200;
				}
			}
		}

		.song-info-wrapper {
			.transition(all 0.3s ease-in-out);
			.make-sm-column(7);
			padding-bottom: @font-size-base * 3;

			@media screen and (max-width: @screen-xs-max){
				.song-title {
					text-indent: -0.4rem;
					margin-bottom: 1rem;
				}

				.tag-header {
					.clearfix;
				}

				.song-header {
					.transition(all 200ms ease-in-out);
					.transform-origin(bottom left);
					.scale(0);
					max-height: 0;
					opacity: 0;

					.small&{
						.scale(1);
						max-height: 100%;
						opacity: 1;
					}
				}
			}

			.small& {
				.transition(all 0.3s ease-in-out  0.3s);
				.make-sm-column(12);
				.make-md-column(12);
				padding-bottom: 0;
			}
		}
	}
}

.song-title {
	font-size: @font-size-base * 1.5;
	text-indent: -0.1rem;
	margin-bottom: 0.5rem;
	.transition(font-size 0.3s ease-in-out);

	@media screen and (max-width: @screen-xs-max){
		font-size: @font-size-base * 1.2;
	}

	.small & {
		font-size: @font-size-base;
	}

}

.artist {
	font-family: @font-family-condensed;
	text-transform: uppercase;
	letter-spacing: 0.1rem;
	font-size: @font-size-base * 3;
	color: @music-red-light;
	margin-bottom: 0.5rem;
	.transition(font-size 0.3s ease-in-out);

	.small & {
		font-size: @font-size-base * 1.4;
	}

	@media screen and (min-width: 1400px){
		margin-right: 11rem;
	}

	@media screen and (max-width: @screen-xs-max){
		font-size: @font-size-base * 1.5;
	}
}
/* ... */

